--- a/Microsoft.IoT.ServiceFabric.Alams/Microsoft.IoT.ServiceFabric.Alams.csproj
+++ b/Microsoft.IoT.ServiceFabric.Alams/Microsoft.IoT.ServiceFabric.Alams.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
-    <ProjectGuid>{F7C40D73-112E-437B-A1BD-2B8F3228DDF3}</ProjectGuid>
+    <ProjectGuid>{199DFED0-2E68-4F16-9425-ADF4FE359CD1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Microsoft.IoT.ServiceFabric.Ingest</RootNamespace>
-    <AssemblyName>Microsoft.IoT.ServiceFabric.Ingest</AssemblyName>
+    <RootNamespace>Microsoft.IoT.ServiceFabric.Alams</RootNamespace>
+    <AssemblyName>Microsoft.IoT.ServiceFabric.Alams</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -198,7 +198,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ingest.cs" />
+    <Compile Include="Alams.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceEventSource.cs" />
   </ItemGroup>
@@ -212,9 +212,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Microsoft.IoT.ServiceFabric.Alams.Interfaces\Microsoft.IoT.ServiceFabric.Alams.Interfaces.csproj">
+      <Project>{0f084a7e-fe24-4ef6-aa49-ab91356844b1}</Project>
+      <Name>Microsoft.IoT.ServiceFabric.Alams.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Microsoft.IoT.ServiceFabric.Common\Microsoft.IoT.ServiceFabric.Common.csproj">
-      <Project>{6763ED5B-E21B-47FA-AC08-D858E2B34409}</Project>
+      <Project>{6763ed5b-e21b-47fa-ac08-d858e2b34409}</Project>
       <Name>Microsoft.IoT.ServiceFabric.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.IoT.ServiceFabric.Model\Microsoft.IoT.ServiceFabric.Model.csproj">
+      <Project>{E218854B-FA51-4DBB-9B5D-569EBC6ED8DF}</Project>
+      <Name>Microsoft.IoT.ServiceFabric.Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
